Jan Update - SC Loc

--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -395,12 +395,11 @@
  mod_pc_pd_blossom_habitability: "高山星球宜居性"
  trait_pc_pd_blossom_preference: "高山星球偏好"
  trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_taiga: "Taiga World"
- pc_pd_taiga_desc: "With its nitrogen-oxygen atmosphere, this mountainous forest planet hosts an active yet frigid hydrosphere, experiencing long, cold winters and short, cool summers."
- pc_pd_taiga_adj: "mountainous"
- mod_pc_pd_taiga_habitability: "Alpine Habitability"
- trait_pc_pd_taiga_preference: "Alpine Preference"
- trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_taiga: "泰加林星球"
+ pc_pd_taiga_desc: "有着氮氧大气的山地森林星球，水体活跃但温度极低。冬季漫长而寒冷，夏季短暂而凉爽。"
+ pc_pd_taiga_adj: "山地"
+ mod_pc_pd_taiga_habitability: "高山星球宜居性"
+ trait_pc_pd_taiga_preference: "高山星球偏好"
  pc_pd_glaciovolcanic: "冰川火山星球"
  pc_pd_glaciovolcanic_desc: "拥有氮氧大气的寒冷山地星球。这里的火山活动非常活跃，因而形成了丰富的地热湖泊，将罕见的矿物和能源带到冰封的地表。"
  pc_pd_glaciovolcanic_adj: "火山"
