--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_domed_colonies_l_simp_chinese.yml
@@ -17,45 +17,45 @@
  pc_pd_domed_colony_barren: "穹顶殖民地（荒芜星球）"
  pc_pd_domed_colony_barren_desc: "荒芜的岩石星球，几乎不存在大气层。表面布满了陨石坑，完全没有生命存在。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_barren_adj: "穹顶"
- mod_pc_pd_domed_colony_barren_habitability: "Placehold/Should not see."
- trait_pc_pd_domed_colony_barren_preference: "Placehold/Should not see."
- trait_pc_pd_domed_colony_barren_preference_desc: "Placehold/Should not see."
+ mod_pc_pd_domed_colony_barren_habitability: "占位符"
+ trait_pc_pd_domed_colony_barren_preference: "占位符"
+ trait_pc_pd_domed_colony_barren_preference_desc: "占位符"
  pc_pd_domed_colony_barren_cold: "$pc_pd_domed_colony_barren$"
  pc_pd_domed_colony_barren_cold_desc: "$pc_pd_domed_colony_barren_desc$"
  pc_pd_domed_colony_barren_cold_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_barren_cold_habitability: "Placehold/Should not see."
- trait_pc_pd_domed_colony_barren_cold_preference: "Placehold/Should not see."
- trait_pc_pd_domed_colony_barren_cold_preference_desc: "Placehold/Should not see."
+ mod_pc_pd_domed_colony_barren_cold_habitability: "占位符"
+ trait_pc_pd_domed_colony_barren_cold_preference: "占位符"
+ trait_pc_pd_domed_colony_barren_cold_preference_desc: "占位符"
  pc_pd_domed_colony_frozen: "穹顶殖民地（冰封星球）"
  pc_pd_domed_colony_frozen_desc: "一颗地表上覆盖着厚厚的永冻冰层的岩质星球。极低的温度和非常稀薄的大气令生命难以存活在它的地表上。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_frozen_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_frozen_habitability: "Placehold/Should not see."
- trait_pc_pd_domed_colony_frozen_preference: "Placehold/Should not see."
- trait_pc_pd_domed_colony_frozen_preference_desc: "Placehold/Should not see."
+ mod_pc_pd_domed_colony_frozen_habitability: "占位符"
+ trait_pc_pd_domed_colony_frozen_preference: "占位符"
+ trait_pc_pd_domed_colony_frozen_preference_desc: "占位符"
  pc_pd_domed_colony_toxic: "穹顶殖民地（剧毒星球）"
  pc_pd_domed_colony_toxic_desc: "有剧毒大气层的岩石世界，任何高级生命体都无法生存。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_toxic_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_toxic_habitability: "Placehold/Should not see."
- trait_pc_pd_domed_colony_toxic_preference: "Placehold/Should not see."
- trait_pc_pd_domed_colony_toxic_preference_desc: "Placehold/Should not see."
+ mod_pc_pd_domed_colony_toxic_habitability: "占位符"
+ trait_pc_pd_domed_colony_toxic_preference: "占位符"
+ trait_pc_pd_domed_colony_toxic_preference_desc: "占位符"
  pc_pd_domed_colony_superhabitable: "穹顶殖民地（超级类地星球）"
  pc_pd_domed_colony_superhabitable_desc: "这类超级类地星球是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_superhabitable_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_superhabitable_habitability: "Placehold/Should not see."
- trait_pc_pd_domed_colony_superhabitable_preference: "Placehold/Should not see."
- trait_pc_pd_domed_colony_superhabitable_preference_desc: "Placehold/Should not see."
+ mod_pc_pd_domed_colony_superhabitable_habitability: "占位符"
+ trait_pc_pd_domed_colony_superhabitable_preference: "占位符"
+ trait_pc_pd_domed_colony_superhabitable_preference_desc: "占位符"
  pc_pd_domed_colony_tidally_locked: "穹顶殖民地（潮汐锁定星球）"
  pc_pd_domed_colony_tidally_locked_desc: "这一潮汐锁定星球是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_tidally_locked_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_tidally_locked_habitability: "Placehold/Should not see."
- trait_pc_pd_domed_colony_tidally_locked_preference: "Placehold/Should not see."
- trait_pc_pd_domed_colony_tidally_locked_preference_desc: "Placehold/Should not see."
+ mod_pc_pd_domed_colony_tidally_locked_habitability: "占位符"
+ trait_pc_pd_domed_colony_tidally_locked_preference: "占位符"
+ trait_pc_pd_domed_colony_tidally_locked_preference_desc: "占位符"
  pc_pd_domed_colony_cave: "穹顶殖民地（岩洞星球）"
  pc_pd_domed_colony_cave_desc: "这类岩洞星球是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式。可以在其表面建立穹顶殖民地，设立永久的居住地。"
  pc_pd_domed_colony_cave_adj: "$pc_pd_domed_colony_barren_adj$"
- mod_pc_pd_domed_colony_cave_habitability: "Placehold/Should not see."
- trait_pc_pd_domed_colony_cave_preference: "Placehold/Should not see."
- trait_pc_pd_domed_colony_cave_preference_desc: "Placehold/Should not see."
+ mod_pc_pd_domed_colony_cave_habitability: "占位符"
+ trait_pc_pd_domed_colony_cave_preference: "占位符"
+ trait_pc_pd_domed_colony_cave_preference_desc: "占位符"
  hab_terraforming_candidate: "环境改造候选"
  hab_terraforming_candidate_desc: "尽管表面荒芜贫瘠毫无生机，这颗星球上仍存在有以冻结形态存在的水，这里也许曾经孕育过一个生机勃勃的生态系统。如果利用合适的科技加以环境改造，这里可能成为一个宜居的世界。"
  pd_domed_colony: "穹顶殖民地"
