--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_ascension_worlds_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_ascension_worlds_l_simp_chinese.yml
@@ -1,5 +1,5 @@
 ﻿l_simp_chinese:
- pd_placeholder_tooltip: "Placeholder AP - DO NOT USE"
+ pd_placeholder_tooltip: "占位符"
  d_pd_tree_of_life_uncommon: "生命之树"
  d_pd_tree_of_life_uncommon_desc: "巨树的一根分枝，被蜂巢移植到此处。尽管生长环境适宜，此地异常的生态系统却使其无法完全成长。"
  d_pd_tree_of_life_home: "生命之树"
@@ -20,8 +20,8 @@
  pd_tree_of_life_home_desc: "该星球的生命之树已经完全长成。它的根系为劳动子个体提供了空间，也理所当然地可以阻挡侵袭。"
  pd_no_lifetree: "无生命之树"
  pd_no_lifetree_desc: "没有生命之树，蜂群是不完整的。"
- origin_pd_aw_tree_of_life: "Placeholder Origin - DO NOT USE"
- origin_pd_aw_tree_of_life_desc: "This origin is a placeholder and will not work in Stellaris. Please remove it before starting  your game, as it will cause issues."
+ origin_pd_aw_tree_of_life: "占位符起源"
+ origin_pd_aw_tree_of_life_desc: "无效的占位符起源。不要选择该起源，否则会引发BUG。"
  decision_pd_wasteland_planet: "无管制工业标准"
  decision_pd_wasteland_planet_desc: "环境问题只会阻碍我们前进。忽略该星球的自然生态系统，我们会解放它真正的工业潜力。"
  decision_pd_wasteland_planet_effects_short: "已添加§Y$pd_wasteland_planet$§!修正。\n\n会增加§G工业产出§!，但是会降低£mod_pop_environment_tolerance£ §R宜居性§!。"
@@ -57,7 +57,7 @@
  decision_pd_necro_planet_cleanup: "移除行星墓城"
  decision_pd_necro_planet_cleanup_desc: "我们必须移除该星球前主人遗留的神庙和坟墓。"
  decision_pd_necro_planet_cleanup_effects_short: "§Y$pd_aw_necro_planet$§!修正将被移除。"
- pd_aw_necro_planet: "Placeholder for OW"
+ pd_aw_necro_planet: "占位符"
  MESSAGE_PD_NECRO_DESC:1 "$PLANET|Y$现在已经是§Y$pd_aw_necro_planet$§!"
  MESSAGE_PD_NECRO_MESSAGE_TYPE_TITLE: "行星墓城已完成"
  MESSAGE_PD_NECRO_CLEANUP_DESC:1 "$PLANET|Y$上的行星墓城已被移除。"
