--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -395,11 +395,6 @@
  mod_pc_pd_blossom_habitability: "高山星球宜居性"
  trait_pc_pd_blossom_preference: "高山星球偏好"
  trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_taiga: "泰加林星球"
- pc_pd_taiga_desc: "有着氮氧大气的山地森林星球，水体活跃但温度极低。冬季漫长而寒冷，夏季短暂而凉爽。"
- pc_pd_taiga_adj: "山地"
- mod_pc_pd_taiga_habitability: "高山星球宜居性"
- trait_pc_pd_taiga_preference: "高山星球偏好"
  pc_pd_glaciovolcanic: "冰川火山星球"
  pc_pd_glaciovolcanic_desc: "拥有氮氧大气的寒冷山地星球。这里的火山活动非常活跃，因而形成了丰富的地热湖泊，将罕见的矿物和能源带到冰封的地表。"
  pc_pd_glaciovolcanic_adj: "火山"
@@ -679,12 +674,6 @@
  mod_pc_pd_cryovolcano_habitability: "苔原星球宜居性"
  trait_pc_pd_cryovolcano_preference: "苔原星球偏好"
  trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_treeline: "Treeline World"
- pc_pd_treeline_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere, where icy wastelands dominate most of the surface, except for a lush forest ecosystem flourishing along the equatorial band."
- pc_pd_treeline_adj: "frigid"
- mod_pc_pd_treeline_habitability: "Tundra Habitability"
- trait_pc_pd_treeline_preference: "Tundra Preference"
- trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_moss: "苔藓星球"
  pc_pd_moss_desc: "广袤、致密的苔藓完全覆盖了星球表面。坚韧的苔藓盖在土地上，形成了海绵般的生态系统，让水圈变得愈加稳定。"
  pc_pd_moss_adj: "苔藓"
@@ -709,3 +698,15 @@
  mod_pc_pd_columnar_habitability: "海洋星球宜居性"
  trait_pc_pd_columnar_preference: "海洋星球偏好"
  trait_pc_pd_columnar_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_taiga: "泰加林星球"
+ pc_pd_taiga_desc: "有着氮氧大气的山地森林星球，水体活跃但温度极低。冬季漫长而寒冷，夏季短暂而凉爽。"
+ pc_pd_taiga_adj: "山地"
+ mod_pc_pd_taiga_habitability: "高山星球宜居性"
+ trait_pc_pd_taiga_preference: "高山星球偏好"
+ trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_treeline: "林线星球"
+ pc_pd_treeline_desc: "拥有氮氧大气的寒冷岩石星球，除去赤道周围繁盛的森林生态系统外，大部分地表都是荒芜的冰原。"
+ pc_pd_treeline_adj: "严寒"
+ mod_pc_pd_treeline_habitability: "苔原星球宜居性"
+ trait_pc_pd_treeline_preference: "苔原星球偏好"
+ trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
