--- a/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
+++ b/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
@@ -77,24 +77,24 @@
  decision_pd_commerical_arcology_project_relic_desc: "这颗行星曾经是一个充满生机的普世城。重建星球的任务十分艰巨，但我们可以使其恢复为商业理想城。"
  decision_pd_commerical_arcology_project_relic_effects: "$decision_pd_commerical_arcology_project_effects$"
  decision_pd_commerical_arcology_project_relic_effects_short: "$decision_pd_commerical_arcology_project_effects_short$"
- pc_pd_fortress_city: "Dummy-Class, do not use."
- pc_pd_fortress_city_desc: "Dummy-Class, do not use."
+ pc_pd_fortress_city: "占位符"
+ pc_pd_fortress_city_desc: "占位符"
  pc_pd_fortress_city_adj: "城市"
- mod_pc_pd_fortress_city_habitability: "Dummy-Class, do not use."
- trait_pc_pd_fortress_city_preference: "Dummy-Class, do not use."
- trait_pc_pd_fortress_city_preference_desc: "Dummy-Class, do not use."
- pc_pd_commerical_city: "Dummy-Class, do not use."
- pc_pd_commerical_city_desc: "Dummy-Class, do not use."
- pc_pd_commerical_city_adj: "Dummy-Class, do not use."
- mod_pc_pd_commerical_city_habitability: "Dummy-Class, do not use."
- trait_pc_pd_commerical_city_preference: "Dummy-Class, do not use."
- trait_pc_pd_commerical_city_preference_desc: "Dummy-Class, do not use."
- pc_pd_garden_city: "Dummy-Class, do not use."
- pc_pd_garden_city_desc: "Dummy-Class, do not use."
- pc_pd_garden_city_adj: "Dummy-Class, do not use."
- mod_pc_pd_garden_city_habitability: "Dummy-Class, do not use."
- trait_pc_pd_garden_city_preference: "Dummy-Class, do not use."
- trait_pc_pd_garden_city_preference_desc: "Dummy-Class, do not use."
+ mod_pc_pd_fortress_city_habitability: "占位符"
+ trait_pc_pd_fortress_city_preference: "占位符"
+ trait_pc_pd_fortress_city_preference_desc: "占位符"
+ pc_pd_commerical_city: "占位符"
+ pc_pd_commerical_city_desc: "占位符"
+ pc_pd_commerical_city_adj: "占位符"
+ mod_pc_pd_commerical_city_habitability: "占位符"
+ trait_pc_pd_commerical_city_preference: "占位符"
+ trait_pc_pd_commerical_city_preference_desc: "占位符"
+ pc_pd_garden_city: "占位符"
+ pc_pd_garden_city_desc: "占位符"
+ pc_pd_garden_city_adj: "占位符"
+ mod_pc_pd_garden_city_habitability: "占位符"
+ trait_pc_pd_garden_city_preference: "占位符"
+ trait_pc_pd_garden_city_preference_desc: "占位符"
  pc_pd_hive: "蜂巢主脑星球"
  pc_pd_hive_desc: "这整个世界其实就是一个巨大的生物体，与创造它的蜂群思维交缠在一起。它被塑造成高级思维进程的堡垒，受到严密戒备。整个世界随时准备迎击不受欢迎的来客。"
  pc_pd_hive_adj: "$pc_hive_adj$"
