--- a/planetary_diversity/localisation/korean/planetarydiversity_domed_colonies_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_domed_colonies_l_korean.yml
@@ -91,16 +91,16 @@
  pd_domed_base_energy_desc: "발전소와 에너지 변환기는 이 첨단 보호 돔 네트워크의 핵심을 형성합니다. 항성계 내 행성과 연결되어 있으며, 중요한 자원과 에너지 크레딧의 분배를 위해 이 연결에 의존합니다."
  pd_domed_base_food: "수경 재배 돔형 기지"
  pd_domed_base_food_desc: "수경 재배 농장과 농업 모듈은 이 첨단 보호 돔 네트워크에 걸쳐 있습니다. 항성계 내 행성과 연결된 이 연결망에 의존하여 식량을 공급하고 보급합니다."
- pd_domed_moonbase_site: "위성 기지 위치"
- pd_domed_moonbase_site_desc: "이 위성은 돔형 기지를 건설하기에 이상적이지만, 공급과 지속 가능성을 보장하려면 항성계 내에 식민지화된 행성이 있어야 합니다."
- pd_domed_research_site: "가능한 연구 돔형 기지 위치"
- pd_domed_research_site_desc: "이 행성체는 돔형 연구 기지를 건설하는 데 이상적이지만, 공급과 지속 가능성을 보장하기 위해서는 항성계 내에 식민지화된 행성이 있어야 합니다."
- pd_domed_mining_site: "가능한 채광 돔형 기지 위치"
- pd_domed_mining_site_desc: "이 행성체는 돔형 채굴 기지를 건설하는 데 이상적이지만, 공급과 지속 가능성을 보장하기 위해서는 항성계 내에 식민지화된 행성이 필요합니다."
- pd_domed_food_site: "가능한 수경 재배 돔형 기지 위치"
- pd_domed_food_site_desc: "이 행성체는 돔형 수경 재배 기지를 건설하는 데 이상적이지만, 공급과 지속 가능성을 보장하려면 항성계 내에 식민지화된 행성이 필요합니다."
- pd_domed_energy_site: "가능한 발전소 돔형 기지 위치"
- pd_domed_energy_site_desc: "이 행성체는 돔형 발전기 기지를 건설하는 데 이상적이지만, 공급과 지속 가능성을 보장하기 위해서는 항성계 내에 식민지화된 행성이 필요합니다."
+ pd_domed_moonbase_site_1: "위성 기지 위치"
+ pd_domed_moonbase_site_1_desc: "이 위성은 돔형 기지를 건설하기에 이상적이지만, 공급과 지속 가능성을 보장하려면 항성계 내에 식민지화된 행성이 있어야 합니다."
+ pd_domed_research_site_1: "가능한 연구 돔형 기지 위치"
+ pd_domed_research_site_1_desc: "이 행성체는 돔형 연구 기지를 건설하는 데 이상적이지만, 공급과 지속 가능성을 보장하기 위해서는 항성계 내에 식민지화된 행성이 있어야 합니다."
+ pd_domed_mining_site_1: "가능한 채광 돔형 기지 위치"
+ pd_domed_mining_site_1_desc: "이 행성체는 돔형 채굴 기지를 건설하는 데 이상적이지만, 공급과 지속 가능성을 보장하기 위해서는 항성계 내에 식민지화된 행성이 필요합니다."
+ pd_domed_food_site_1: "가능한 수경 재배 돔형 기지 위치"
+ pd_domed_food_site_1_desc: "이 행성체는 돔형 수경 재배 기지를 건설하는 데 이상적이지만, 공급과 지속 가능성을 보장하려면 항성계 내에 식민지화된 행성이 필요합니다."
+ pd_domed_energy_site_1: "가능한 발전소 돔형 기지 위치"
+ pd_domed_energy_site_1_desc: "이 행성체는 돔형 발전기 기지를 건설하는 데 이상적이지만, 공급과 지속 가능성을 보장하기 위해서는 항성계 내에 식민지화된 행성이 필요합니다."
 
 #Deposits
  #Terraforming Deposits
@@ -181,3 +181,62 @@
 
 #Warning
  requires_no_terraforming:1 "$TRIGGER_FAIL$테라포밍 프로젝트가 진행 중인 행성에는 건설할 수 없습니다."
+
+#Jan 2025 Update - Decisions to make Outposts
+ pd_domed_moonbase_site_2: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_2_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_3: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_3_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_4: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_4_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_5: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_5_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_research_site_2: "$pd_domed_research_site_1$"
+ pd_domed_research_site_2_desc: "$pd_domed_research_site_1_desc$"
+ pd_domed_research_site_3: "$pd_domed_research_site_1$"
+ pd_domed_research_site_3_desc: "$pd_domed_research_site_1_desc$"
+ pd_domed_mining_site_2: "$pd_domed_mining_site_1$"
+ pd_domed_mining_site_2_desc: "$pd_domed_mining_site_1_desc$"
+ pd_domed_mining_site_3: "$pd_domed_mining_site_1$"
+ pd_domed_mining_site_3_desc: "$pd_domed_mining_site_1_desc$"
+ pd_domed_food_site_2: "$pd_domed_food_site_1$"
+ pd_domed_food_site_2_desc: "$pd_domed_food_site_1_desc$"
+ pd_domed_food_site_3: "$pd_domed_food_site_1$"
+ pd_domed_food_site_3_desc: "$pd_domed_food_site_1_desc$"
+ pd_domed_energy_site_2: "$pd_domed_energy_site_1$"
+ pd_domed_energy_site_2_desc: "$pd_domed_energy_site_1_desc$"
+ pd_domed_energy_site_3: "$pd_domed_energy_site_1$"
+ pd_domed_energy_site_3_desc: "$pd_domed_energy_site_1_desc$"
+ decision_build_pd_moon_base: "Build Moon Outpost"
+ decision_build_pd_moon_base_desc: "We will construct Moon Outposts on the moon or moons of this world."
+ decision_build_pd_moon_base_moon_colony: "$decision_build_pd_moon_base$"
+ decision_build_pd_moon_base_moon_colony_desc: "We will construct Moon Outposts on the other moon or moons of the planet this world orbits."
+ decision_build_pd_mining_base: "Build Mining Outpost in System"
+ decision_build_pd_mining_base_desc: "We will construct a Planetary Mining Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_mining_base_2: "$decision_build_pd_mining_base$"
+ decision_build_pd_mining_base_2_desc: "$decision_build_pd_mining_base_desc$"
+ decision_build_pd_mining_base_3: "$decision_build_pd_mining_base$"
+ decision_build_pd_mining_base_3_desc: "$decision_build_pd_mining_base_desc$"
+ decision_build_pd_food_base: "Build Hydroponics Outpost in System"
+ decision_build_pd_food_base_desc: "We will construct a Planetary Hydroponics Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_food_base_2: "$decision_build_pd_food_base$"
+ decision_build_pd_food_base_2_desc: "$decision_build_pd_food_base_desc$"
+ decision_build_pd_food_base_3: "$decision_build_pd_food_base$"
+ decision_build_pd_food_base_3_desc: "$decision_build_pd_food_base_desc$"
+ decision_build_pd_energy_base: "Build Generator Oupost in System"
+ decision_build_pd_energy_base_desc: "We will construct a Planetary Generator Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_energy_base_2: "$decision_build_pd_energy_base$"
+ decision_build_pd_energy_base_2_desc: "$decision_build_pd_energy_base_desc$"
+ decision_build_pd_energy_base_3: "$decision_build_pd_energy_base$"
+ decision_build_pd_energy_base_3_desc: "$decision_build_pd_energy_base_desc$"
+ decision_build_pd_research_base: "Build Research Outpost in System"
+ decision_build_pd_research_base_desc: "We will construct a Planetary Research Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_research_base_2: "$decision_build_pd_research_base$"
+ decision_build_pd_research_base_2_desc: "$decision_build_pd_research_base_desc$"
+ decision_build_pd_research_base_3: "$decision_build_pd_research_base$"
+ decision_build_pd_research_base_3_desc: "$decision_build_pd_research_base_desc$"
+ MAKE_MOON_BASES: "§YMoon Outpost§! is constructed."
+ MAKE_MINIG_BASES: "§YMining Outpost§! is constructed."
+ MAKE_FOOD_BASES: "§YHydroponics Outpost§! is constructed."
+ MAKE_ENERGY_BASES: "§YGenerator Outpost§! is constructed."
+ MAKE_RESEARCH_BASES: "§YResearch Outpost§! is constructed."
