--- a/planetary_diversity/localisation/russian/planetarydiversity_domed_colonies_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_domed_colonies_l_russian.yml
@@ -91,16 +91,16 @@
  pd_domed_base_energy_desc: "Электростанции и преобразователи энергии составляют основу этой развитой сети защитных куполов. Эта купольная база прямо зависит от обеспечения со стороны ближайшей обитаемой планеты, а также перенаправляет туда большую часть добытой энергии."
  pd_domed_base_food: "Гидропонная лунная база"
  pd_domed_base_food_desc: "Гидропонные фермы и сельскохозяйственные модули занимают всю эту развитую сеть защитных куполов. Эта купольная база частично зависит от обеспечения со стороны ближайшей обитаемой планеты, но и сама снабжает её выращенной пищей."
- pd_domed_moonbase_site: "Место для лунной базы"
- pd_domed_moonbase_site_desc: "Эта луна идеально подходит для основания базы, однако необходимо наличие в системе минимум одной населённой планеты для обеспечения её снабжения."
- pd_domed_research_site: "Место для исследовательской лунной базы"
- pd_domed_research_site_desc: "Эта луна идеально подходит для основания исследовательской базы, однако необходимо наличие в системе минимум одной населённой планеты для обеспечения её снабжения."
- pd_domed_mining_site: "Место для добывающей лунной базы"
- pd_domed_mining_site_desc: "Эта луна идеально подходит для основания добывающей базы, однако необходимо наличие в системе минимум одной населённой планеты для обеспечения её снабжения."
- pd_domed_food_site: "Место для гидропонной лунной базы"
- pd_domed_food_site_desc: "Эта луна идеально подходит для основания гидропонно базы, однако необходимо наличие в системе минимум одной населённой планеты для обеспечения её снабжения."
- pd_domed_energy_site: "Место для энергетической лунной базы"
- pd_domed_energy_site_desc: "Эта луна идеально подходит для основания энергетической базы, однако необходимо наличие в системе минимум одной населённой планеты для обеспечения её снабжения."
+ pd_domed_moonbase_site_1: "Место для лунной базы"
+ pd_domed_moonbase_site_1_desc: "Эта луна идеально подходит для основания базы, однако необходимо наличие в системе минимум одной населённой планеты для обеспечения её снабжения."
+ pd_domed_research_site_1: "Место для исследовательской лунной базы"
+ pd_domed_research_site_1_desc: "Эта луна идеально подходит для основания исследовательской базы, однако необходимо наличие в системе минимум одной населённой планеты для обеспечения её снабжения."
+ pd_domed_mining_site_1: "Место для добывающей лунной базы"
+ pd_domed_mining_site_1_desc: "Эта луна идеально подходит для основания добывающей базы, однако необходимо наличие в системе минимум одной населённой планеты для обеспечения её снабжения."
+ pd_domed_food_site_1: "Место для гидропонной лунной базы"
+ pd_domed_food_site_1_desc: "Эта луна идеально подходит для основания гидропонно базы, однако необходимо наличие в системе минимум одной населённой планеты для обеспечения её снабжения."
+ pd_domed_energy_site_1: "Место для энергетической лунной базы"
+ pd_domed_energy_site_1_desc: "Эта луна идеально подходит для основания энергетической базы, однако необходимо наличие в системе минимум одной населённой планеты для обеспечения её снабжения."
 
 #Deposits
  #Terraforming Deposits
@@ -181,3 +181,62 @@
 
 #Warning
  requires_no_terraforming:1 "$TRIGGER_FAIL$Нельзя строить на планетах с уже активным проектом терраформирования."
+
+#Jan 2025 Update - Decisions to make Outposts
+ pd_domed_moonbase_site_2: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_2_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_3: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_3_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_4: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_4_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_5: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_5_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_research_site_2: "$pd_domed_research_site_1$"
+ pd_domed_research_site_2_desc: "$pd_domed_research_site_1_desc$"
+ pd_domed_research_site_3: "$pd_domed_research_site_1$"
+ pd_domed_research_site_3_desc: "$pd_domed_research_site_1_desc$"
+ pd_domed_mining_site_2: "$pd_domed_mining_site_1$"
+ pd_domed_mining_site_2_desc: "$pd_domed_mining_site_1_desc$"
+ pd_domed_mining_site_3: "$pd_domed_mining_site_1$"
+ pd_domed_mining_site_3_desc: "$pd_domed_mining_site_1_desc$"
+ pd_domed_food_site_2: "$pd_domed_food_site_1$"
+ pd_domed_food_site_2_desc: "$pd_domed_food_site_1_desc$"
+ pd_domed_food_site_3: "$pd_domed_food_site_1$"
+ pd_domed_food_site_3_desc: "$pd_domed_food_site_1_desc$"
+ pd_domed_energy_site_2: "$pd_domed_energy_site_1$"
+ pd_domed_energy_site_2_desc: "$pd_domed_energy_site_1_desc$"
+ pd_domed_energy_site_3: "$pd_domed_energy_site_1$"
+ pd_domed_energy_site_3_desc: "$pd_domed_energy_site_1_desc$"
+ decision_build_pd_moon_base: "Build Moon Outpost"
+ decision_build_pd_moon_base_desc: "We will construct Moon Outposts on the moon or moons of this world."
+ decision_build_pd_moon_base_moon_colony: "$decision_build_pd_moon_base$"
+ decision_build_pd_moon_base_moon_colony_desc: "We will construct Moon Outposts on the other moon or moons of the planet this world orbits."
+ decision_build_pd_mining_base: "Build Mining Outpost in System"
+ decision_build_pd_mining_base_desc: "We will construct a Planetary Mining Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_mining_base_2: "$decision_build_pd_mining_base$"
+ decision_build_pd_mining_base_2_desc: "$decision_build_pd_mining_base_desc$"
+ decision_build_pd_mining_base_3: "$decision_build_pd_mining_base$"
+ decision_build_pd_mining_base_3_desc: "$decision_build_pd_mining_base_desc$"
+ decision_build_pd_food_base: "Build Hydroponics Outpost in System"
+ decision_build_pd_food_base_desc: "We will construct a Planetary Hydroponics Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_food_base_2: "$decision_build_pd_food_base$"
+ decision_build_pd_food_base_2_desc: "$decision_build_pd_food_base_desc$"
+ decision_build_pd_food_base_3: "$decision_build_pd_food_base$"
+ decision_build_pd_food_base_3_desc: "$decision_build_pd_food_base_desc$"
+ decision_build_pd_energy_base: "Build Generator Oupost in System"
+ decision_build_pd_energy_base_desc: "We will construct a Planetary Generator Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_energy_base_2: "$decision_build_pd_energy_base$"
+ decision_build_pd_energy_base_2_desc: "$decision_build_pd_energy_base_desc$"
+ decision_build_pd_energy_base_3: "$decision_build_pd_energy_base$"
+ decision_build_pd_energy_base_3_desc: "$decision_build_pd_energy_base_desc$"
+ decision_build_pd_research_base: "Build Research Outpost in System"
+ decision_build_pd_research_base_desc: "We will construct a Planetary Research Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_research_base_2: "$decision_build_pd_research_base$"
+ decision_build_pd_research_base_2_desc: "$decision_build_pd_research_base_desc$"
+ decision_build_pd_research_base_3: "$decision_build_pd_research_base$"
+ decision_build_pd_research_base_3_desc: "$decision_build_pd_research_base_desc$"
+ MAKE_MOON_BASES: "§YMoon Outpost§! is constructed."
+ MAKE_MINIG_BASES: "§YMining Outpost§! is constructed."
+ MAKE_FOOD_BASES: "§YHydroponics Outpost§! is constructed."
+ MAKE_ENERGY_BASES: "§YGenerator Outpost§! is constructed."
+ MAKE_RESEARCH_BASES: "§YResearch Outpost§! is constructed."
