--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -679,12 +679,11 @@
  mod_pc_pd_cryovolcano_habitability: "苔原星球宜居性"
  trait_pc_pd_cryovolcano_preference: "苔原星球偏好"
  trait_pc_pd_cryovolcano_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_treeline: "Treeline World"
- pc_pd_treeline_desc: "A frigid, rocky planet with a nitrogen-oxygen atmosphere, where icy wastelands dominate most of the surface, except for a lush forest ecosystem flourishing along the equatorial band."
- pc_pd_treeline_adj: "frigid"
- mod_pc_pd_treeline_habitability: "Tundra Habitability"
- trait_pc_pd_treeline_preference: "Tundra Preference"
- trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_treeline: "林线星球"
+ pc_pd_treeline_desc: "拥有氮氧大气的寒冷岩石星球，除去赤道周围繁盛的森林生态系统外，大部分地表都是荒芜的冰原。"
+ pc_pd_treeline_adj: "严寒"
+ mod_pc_pd_treeline_habitability: "苔原星球宜居性"
+ trait_pc_pd_treeline_preference: "苔原星球偏好"
  pc_pd_moss: "苔藓星球"
  pc_pd_moss_desc: "广袤、致密的苔藓完全覆盖了星球表面。坚韧的苔藓盖在土地上，形成了海绵般的生态系统，让水圈变得愈加稳定。"
  pc_pd_moss_adj: "苔藓"
