--- a/planetary_diversity/localisation/braz_por/planetarydiversity_domed_colonies_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_domed_colonies_l_braz_por.yml
@@ -91,16 +91,16 @@
  pd_domed_base_energy_desc: "Usinas de energia e conversores de energia formam o núcleo desta rede avançada de cúpulas de proteção. Ligado aos planetas do sistema solar, depende desta ligação para obter recursos vitais e distribuição de créditos energéticos."
  pd_domed_base_food: "Base Cúpula Hidropônica"
  pd_domed_base_food_desc: "Fazendas hidropônicas e módulos agrícolas abrangem essa rede avançada de cúpulas protetoras. Conectado aos planetas do sistema solar, depende dessa conexão para o abastecimento e a disseminação de alimentos."
- pd_domed_moonbase_site: "Local de Base Lunar"
- pd_domed_moonbase_site_desc: "Esta lua é ideal para estabelecer uma Base em Cúpula, mas requer um planeta colonizado dentro do sistema solar para garantir o seu abastecimento e sustentabilidade."
- pd_domed_research_site: "Possível local para base cúpula de pesquisa"
- pd_domed_research_site_desc: "Este planetóide é ideal para estabelecer uma Base de Pesquisa em Cúpula, mas requer um planeta colonizado dentro do sistema solar para garantir seu abastecimento e sustentabilidade."
- pd_domed_mining_site: "Possível local de base cúpula de mineração"
- pd_domed_mining_site_desc: "Este planetóide é ideal para estabelecer uma base de mineração em cúpula, mas requer um planeta colonizado dentro do sistema solar para garantir seu abastecimento e sustentabilidade."
- pd_domed_food_site: "Possível local para base cúpula Hidropônica"
- pd_domed_food_site_desc: "Este planetóide é ideal para estabelecer uma Base Hidrofíntica em Cúpula, mas requer um planeta colonizado dentro do sistema solar para garantir seu abastecimento e sustentabilidade."
- pd_domed_energy_site: "Possível Local para Base Cúpula de Geração"
- pd_domed_energy_site_desc: "Este planetóide é ideal para estabelecer uma Base Geradora em Cúpula, mas requer um planeta colonizado dentro do sistema solar para garantir seu abastecimento e sustentabilidade."
+ pd_domed_moonbase_site_1: "Local de Base Lunar"
+ pd_domed_moonbase_site_1_desc: "Esta lua é ideal para estabelecer uma Base em Cúpula, mas requer um planeta colonizado dentro do sistema solar para garantir o seu abastecimento e sustentabilidade."
+ pd_domed_research_site_1: "Possível local para base cúpula de pesquisa"
+ pd_domed_research_site_1_desc: "Este planetóide é ideal para estabelecer uma Base de Pesquisa em Cúpula, mas requer um planeta colonizado dentro do sistema solar para garantir seu abastecimento e sustentabilidade."
+ pd_domed_mining_site_1: "Possível local de base cúpula de mineração"
+ pd_domed_mining_site_1_desc: "Este planetóide é ideal para estabelecer uma base de mineração em cúpula, mas requer um planeta colonizado dentro do sistema solar para garantir seu abastecimento e sustentabilidade."
+ pd_domed_food_site_1: "Possível local para base cúpula Hidropônica"
+ pd_domed_food_site_1_desc: "Este planetóide é ideal para estabelecer uma Base Hidrofíntica em Cúpula, mas requer um planeta colonizado dentro do sistema solar para garantir seu abastecimento e sustentabilidade."
+ pd_domed_energy_site_1: "Possível Local para Base Cúpula de Geração"
+ pd_domed_energy_site_1_desc: "Este planetóide é ideal para estabelecer uma Base Geradora em Cúpula, mas requer um planeta colonizado dentro do sistema solar para garantir seu abastecimento e sustentabilidade."
 
 #Deposits
  #Terraforming Deposits
@@ -180,3 +180,62 @@
 
 #Warning
  requires_no_terraforming:1 "$TRIGGER_FAIL$Não é possível construir em planetas que tenham projetos de terraformação em andamento."
+
+#Jan 2025 Update - Decisions to make Outposts
+ pd_domed_moonbase_site_2: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_2_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_3: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_3_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_4: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_4_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_5: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_5_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_research_site_2: "$pd_domed_research_site_1$"
+ pd_domed_research_site_2_desc: "$pd_domed_research_site_1_desc$"
+ pd_domed_research_site_3: "$pd_domed_research_site_1$"
+ pd_domed_research_site_3_desc: "$pd_domed_research_site_1_desc$"
+ pd_domed_mining_site_2: "$pd_domed_mining_site_1$"
+ pd_domed_mining_site_2_desc: "$pd_domed_mining_site_1_desc$"
+ pd_domed_mining_site_3: "$pd_domed_mining_site_1$"
+ pd_domed_mining_site_3_desc: "$pd_domed_mining_site_1_desc$"
+ pd_domed_food_site_2: "$pd_domed_food_site_1$"
+ pd_domed_food_site_2_desc: "$pd_domed_food_site_1_desc$"
+ pd_domed_food_site_3: "$pd_domed_food_site_1$"
+ pd_domed_food_site_3_desc: "$pd_domed_food_site_1_desc$"
+ pd_domed_energy_site_2: "$pd_domed_energy_site_1$"
+ pd_domed_energy_site_2_desc: "$pd_domed_energy_site_1_desc$"
+ pd_domed_energy_site_3: "$pd_domed_energy_site_1$"
+ pd_domed_energy_site_3_desc: "$pd_domed_energy_site_1_desc$"
+ decision_build_pd_moon_base: "Build Moon Outpost"
+ decision_build_pd_moon_base_desc: "We will construct Moon Outposts on the moon or moons of this world."
+ decision_build_pd_moon_base_moon_colony: "$decision_build_pd_moon_base$"
+ decision_build_pd_moon_base_moon_colony_desc: "We will construct Moon Outposts on the other moon or moons of the planet this world orbits."
+ decision_build_pd_mining_base: "Build Mining Outpost in System"
+ decision_build_pd_mining_base_desc: "We will construct a Planetary Mining Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_mining_base_2: "$decision_build_pd_mining_base$"
+ decision_build_pd_mining_base_2_desc: "$decision_build_pd_mining_base_desc$"
+ decision_build_pd_mining_base_3: "$decision_build_pd_mining_base$"
+ decision_build_pd_mining_base_3_desc: "$decision_build_pd_mining_base_desc$"
+ decision_build_pd_food_base: "Build Hydroponics Outpost in System"
+ decision_build_pd_food_base_desc: "We will construct a Planetary Hydroponics Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_food_base_2: "$decision_build_pd_food_base$"
+ decision_build_pd_food_base_2_desc: "$decision_build_pd_food_base_desc$"
+ decision_build_pd_food_base_3: "$decision_build_pd_food_base$"
+ decision_build_pd_food_base_3_desc: "$decision_build_pd_food_base_desc$"
+ decision_build_pd_energy_base: "Build Generator Oupost in System"
+ decision_build_pd_energy_base_desc: "We will construct a Planetary Generator Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_energy_base_2: "$decision_build_pd_energy_base$"
+ decision_build_pd_energy_base_2_desc: "$decision_build_pd_energy_base_desc$"
+ decision_build_pd_energy_base_3: "$decision_build_pd_energy_base$"
+ decision_build_pd_energy_base_3_desc: "$decision_build_pd_energy_base_desc$"
+ decision_build_pd_research_base: "Build Research Outpost in System"
+ decision_build_pd_research_base_desc: "We will construct a Planetary Research Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_research_base_2: "$decision_build_pd_research_base$"
+ decision_build_pd_research_base_2_desc: "$decision_build_pd_research_base_desc$"
+ decision_build_pd_research_base_3: "$decision_build_pd_research_base$"
+ decision_build_pd_research_base_3_desc: "$decision_build_pd_research_base_desc$"
+ MAKE_MOON_BASES: "§YMoon Outpost§! is constructed."
+ MAKE_MINIG_BASES: "§YMining Outpost§! is constructed."
+ MAKE_FOOD_BASES: "§YHydroponics Outpost§! is constructed."
+ MAKE_ENERGY_BASES: "§YGenerator Outpost§! is constructed."
+ MAKE_RESEARCH_BASES: "§YResearch Outpost§! is constructed."
