--- a/planetary_diversity/localisation/german/planetarydiversity_domed_colonies_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_domed_colonies_l_german.yml
@@ -91,16 +91,16 @@
  pd_domed_base_energy_desc: "Kraftwerke und Energiewandler bilden den Kern dieses fortschrittlichen Netzwerks aus Schutzkuppeln. Es ist mit Planeten innerhalb des Planetenystems verbunden und ist auf diese Verbindung angewiesen, um lebenswichtige Ressourcen zu erhalten und Energieguthaben zu verteilen."
  pd_domed_base_food: "Hydroponische Kuppelkolonie"
  pd_domed_base_food_desc: "Hydroponische Farmen und landwirtschaftliche Module erstrecken sich über dieses fortschrittliche Netzwerk aus Schutzkuppeln. Es ist mit Planeten innerhalb des Planetenystems verbunden und ist auf diese Verbindung für die Versorgung und Verteilung von Nahrungsmitteln angewiesen."
- pd_domed_moonbase_site: "Mondbasis Bauplatz"
- pd_domed_moonbase_site_desc: "Dieser Mond ist ideal für die Errichtung einer Kuppelkolonie, allerdings ist ein kolonisierter Planet innerhalb des Planetenystems erforderlich, um die Versorgung und Nachhaltigkeit sicherzustellen."
- pd_domed_research_site: "Möglicher Standort für eine Forschungs Kuppelkolonie"
- pd_domed_research_site_desc: "Dieser Planetoid ist ideal für die Errichtung einer Forschungs Kuppelkolonie, erfordert jedoch einen kolonisierten Planeten innerhalb des Planetenystems, um seine Versorgung und Nachhaltigkeit sicherzustellen."
- pd_domed_mining_site: "Möglicher Standort für eine Bergbau Kuppelkolonie"
- pd_domed_mining_site_desc: "Dieser Planetoid ist ideal für die Errichtung einer Bergbau Kuppelkolonie, erfordert jedoch einen kolonisierten Planeten innerhalb des Planetenystems, um seine Versorgung und Nachhaltigkeit sicherzustellen."
- pd_domed_food_site: "Möglicher Standort für Hydroponische Kuppelkolonie"
- pd_domed_food_site_desc: "Dieser Planetoid ist ideal für die Errichtung einer Hydroponischen Kuppelkolonie, erfordert jedoch einen kolonisierten Planeten innerhalb des Planetenystems, um seine Versorgung und Nachhaltigkeit sicherzustellen."
- pd_domed_energy_site: ""Möglicher Standort für eine Generator Kuppelkolonie"
- pd_domed_energy_site_desc: "Dieser Planetoid ist ideal für die Errichtung einer Generator Kuppelkolonie, erfordert jedoch einen kolonisierten Planeten innerhalb des Planetenystems, um seine Versorgung und Nachhaltigkeit sicherzustellen."
+ pd_domed_moonbase_site_1: "Mondbasis Bauplatz"
+ pd_domed_moonbase_site_1_desc: "Dieser Mond ist ideal für die Errichtung einer Kuppelkolonie, allerdings ist ein kolonisierter Planet innerhalb des Planetenystems erforderlich, um die Versorgung und Nachhaltigkeit sicherzustellen."
+ pd_domed_research_site_1: "Möglicher Standort für eine Forschungs Kuppelkolonie"
+ pd_domed_research_site_1_desc: "Dieser Planetoid ist ideal für die Errichtung einer Forschungs Kuppelkolonie, erfordert jedoch einen kolonisierten Planeten innerhalb des Planetenystems, um seine Versorgung und Nachhaltigkeit sicherzustellen."
+ pd_domed_mining_site_1: "Möglicher Standort für eine Bergbau Kuppelkolonie"
+ pd_domed_mining_site_1_desc: "Dieser Planetoid ist ideal für die Errichtung einer Bergbau Kuppelkolonie, erfordert jedoch einen kolonisierten Planeten innerhalb des Planetenystems, um seine Versorgung und Nachhaltigkeit sicherzustellen."
+ pd_domed_food_site_1: "Möglicher Standort für Hydroponische Kuppelkolonie"
+ pd_domed_food_site_1_desc: "Dieser Planetoid ist ideal für die Errichtung einer Hydroponischen Kuppelkolonie, erfordert jedoch einen kolonisierten Planeten innerhalb des Planetenystems, um seine Versorgung und Nachhaltigkeit sicherzustellen."
+ pd_domed_energy_site_1: ""Möglicher Standort für eine Generator Kuppelkolonie"
+ pd_domed_energy_site_1_desc: "Dieser Planetoid ist ideal für die Errichtung einer Generator Kuppelkolonie, erfordert jedoch einen kolonisierten Planeten innerhalb des Planetenystems, um seine Versorgung und Nachhaltigkeit sicherzustellen."
 
 #Deposits
  #Terraforming Deposits
@@ -181,3 +181,62 @@
 
 #Warning
  requires_no_terraforming:1 "$TRIGGER_FAIL$Kann nicht auf Planeten bauen, auf denen Terraforming-Projekte laufen."
+
+#Jan 2025 Update - Decisions to make Outposts
+ pd_domed_moonbase_site_2: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_2_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_3: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_3_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_4: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_4_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_5: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_5_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_research_site_2: "$pd_domed_research_site_1$"
+ pd_domed_research_site_2_desc: "$pd_domed_research_site_1_desc$"
+ pd_domed_research_site_3: "$pd_domed_research_site_1$"
+ pd_domed_research_site_3_desc: "$pd_domed_research_site_1_desc$"
+ pd_domed_mining_site_2: "$pd_domed_mining_site_1$"
+ pd_domed_mining_site_2_desc: "$pd_domed_mining_site_1_desc$"
+ pd_domed_mining_site_3: "$pd_domed_mining_site_1$"
+ pd_domed_mining_site_3_desc: "$pd_domed_mining_site_1_desc$"
+ pd_domed_food_site_2: "$pd_domed_food_site_1$"
+ pd_domed_food_site_2_desc: "$pd_domed_food_site_1_desc$"
+ pd_domed_food_site_3: "$pd_domed_food_site_1$"
+ pd_domed_food_site_3_desc: "$pd_domed_food_site_1_desc$"
+ pd_domed_energy_site_2: "$pd_domed_energy_site_1$"
+ pd_domed_energy_site_2_desc: "$pd_domed_energy_site_1_desc$"
+ pd_domed_energy_site_3: "$pd_domed_energy_site_1$"
+ pd_domed_energy_site_3_desc: "$pd_domed_energy_site_1_desc$"
+ decision_build_pd_moon_base: "Build Moon Outpost"
+ decision_build_pd_moon_base_desc: "We will construct Moon Outposts on the moon or moons of this world."
+ decision_build_pd_moon_base_moon_colony: "$decision_build_pd_moon_base$"
+ decision_build_pd_moon_base_moon_colony_desc: "We will construct Moon Outposts on the other moon or moons of the planet this world orbits."
+ decision_build_pd_mining_base: "Build Mining Outpost in System"
+ decision_build_pd_mining_base_desc: "We will construct a Planetary Mining Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_mining_base_2: "$decision_build_pd_mining_base$"
+ decision_build_pd_mining_base_2_desc: "$decision_build_pd_mining_base_desc$"
+ decision_build_pd_mining_base_3: "$decision_build_pd_mining_base$"
+ decision_build_pd_mining_base_3_desc: "$decision_build_pd_mining_base_desc$"
+ decision_build_pd_food_base: "Build Hydroponics Outpost in System"
+ decision_build_pd_food_base_desc: "We will construct a Planetary Hydroponics Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_food_base_2: "$decision_build_pd_food_base$"
+ decision_build_pd_food_base_2_desc: "$decision_build_pd_food_base_desc$"
+ decision_build_pd_food_base_3: "$decision_build_pd_food_base$"
+ decision_build_pd_food_base_3_desc: "$decision_build_pd_food_base_desc$"
+ decision_build_pd_energy_base: "Build Generator Oupost in System"
+ decision_build_pd_energy_base_desc: "We will construct a Planetary Generator Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_energy_base_2: "$decision_build_pd_energy_base$"
+ decision_build_pd_energy_base_2_desc: "$decision_build_pd_energy_base_desc$"
+ decision_build_pd_energy_base_3: "$decision_build_pd_energy_base$"
+ decision_build_pd_energy_base_3_desc: "$decision_build_pd_energy_base_desc$"
+ decision_build_pd_research_base: "Build Research Outpost in System"
+ decision_build_pd_research_base_desc: "We will construct a Planetary Research Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_research_base_2: "$decision_build_pd_research_base$"
+ decision_build_pd_research_base_2_desc: "$decision_build_pd_research_base_desc$"
+ decision_build_pd_research_base_3: "$decision_build_pd_research_base$"
+ decision_build_pd_research_base_3_desc: "$decision_build_pd_research_base_desc$"
+ MAKE_MOON_BASES: "§YMoon Outpost§! is constructed."
+ MAKE_MINIG_BASES: "§YMining Outpost§! is constructed."
+ MAKE_FOOD_BASES: "§YHydroponics Outpost§! is constructed."
+ MAKE_ENERGY_BASES: "§YGenerator Outpost§! is constructed."
+ MAKE_RESEARCH_BASES: "§YResearch Outpost§! is constructed."
