--- a/planetary_diversity/localisation/polish/planetarydiversity_domed_colonies_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_domed_colonies_l_polish.yml
@@ -91,16 +91,16 @@
  pd_domed_base_energy_desc: "Power plants and energy converters form the core of this advanced network of protective domes. Linked to planets within the solar system, it depends on this connection for vital resources and the distribution of energy credits."
  pd_domed_base_food: "Hydroponics Dome Base"
  pd_domed_base_food_desc: "Hydroponic farms and agricultural modules span this advanced network of protective domes. Connected to planets within the solar system, it relies on this connection for supplies and the dissemination of food supplies."
- pd_domed_moonbase_site: "Moonbase Site"
- pd_domed_moonbase_site_desc: "This moon is ideal for establishing a Domed Base, but it requires a colonized planet within the solar system to ensure its supply and sustainability."
- pd_domed_research_site: "Possible Research Dome Base Site"
- pd_domed_research_site_desc: "This planetoid is ideal for establishing a Domed Research Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
- pd_domed_mining_site: "Possible Mining Dome Base Site"
- pd_domed_mining_site_desc: "This planetoid is ideal for establishing a Domed Mining Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
- pd_domed_food_site: "Possible Hydroponics Dome Base Site"
- pd_domed_food_site_desc: "This planetoid is ideal for establishing a Domed Hydrophincs Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
- pd_domed_energy_site: "Possible Generator Dome Base Site"
- pd_domed_energy_site_desc: "This planetoid is ideal for establishing a Domed Generator Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
+ pd_domed_moonbase_site_1: "Moonbase Site"
+ pd_domed_moonbase_site_1_desc: "This moon is ideal for establishing a Domed Base, but it requires a colonized planet within the solar system to ensure its supply and sustainability."
+ pd_domed_research_site_1: "Possible Research Dome Base Site"
+ pd_domed_research_site_1_desc: "This planetoid is ideal for establishing a Domed Research Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
+ pd_domed_mining_site_1: "Possible Mining Dome Base Site"
+ pd_domed_mining_site_1_desc: "This planetoid is ideal for establishing a Domed Mining Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
+ pd_domed_food_site_1: "Possible Hydroponics Dome Base Site"
+ pd_domed_food_site_1_desc: "This planetoid is ideal for establishing a Domed Hydrophincs Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
+ pd_domed_energy_site_1: "Possible Generator Dome Base Site"
+ pd_domed_energy_site_1_desc: "This planetoid is ideal for establishing a Domed Generator Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
 
 #Deposits
  #Terraforming Deposits
@@ -181,3 +181,62 @@
 
 #Warning
  requires_no_terraforming:1 "$TRIGGER_FAIL$Cannot build on planets that have ongoing terraforming projects."
+
+#Jan 2025 Update - Decisions to make Outposts
+ pd_domed_moonbase_site_2: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_2_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_3: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_3_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_4: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_4_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_moonbase_site_5: "$pd_domed_moonbase_site_1$"
+ pd_domed_moonbase_site_5_desc: "$pd_domed_moonbase_site_1_desc$"
+ pd_domed_research_site_2: "$pd_domed_research_site_1$"
+ pd_domed_research_site_2_desc: "$pd_domed_research_site_1_desc$"
+ pd_domed_research_site_3: "$pd_domed_research_site_1$"
+ pd_domed_research_site_3_desc: "$pd_domed_research_site_1_desc$"
+ pd_domed_mining_site_2: "$pd_domed_mining_site_1$"
+ pd_domed_mining_site_2_desc: "$pd_domed_mining_site_1_desc$"
+ pd_domed_mining_site_3: "$pd_domed_mining_site_1$"
+ pd_domed_mining_site_3_desc: "$pd_domed_mining_site_1_desc$"
+ pd_domed_food_site_2: "$pd_domed_food_site_1$"
+ pd_domed_food_site_2_desc: "$pd_domed_food_site_1_desc$"
+ pd_domed_food_site_3: "$pd_domed_food_site_1$"
+ pd_domed_food_site_3_desc: "$pd_domed_food_site_1_desc$"
+ pd_domed_energy_site_2: "$pd_domed_energy_site_1$"
+ pd_domed_energy_site_2_desc: "$pd_domed_energy_site_1_desc$"
+ pd_domed_energy_site_3: "$pd_domed_energy_site_1$"
+ pd_domed_energy_site_3_desc: "$pd_domed_energy_site_1_desc$"
+ decision_build_pd_moon_base: "Build Moon Outpost"
+ decision_build_pd_moon_base_desc: "We will construct Moon Outposts on the moon or moons of this world."
+ decision_build_pd_moon_base_moon_colony: "$decision_build_pd_moon_base$"
+ decision_build_pd_moon_base_moon_colony_desc: "We will construct Moon Outposts on the other moon or moons of the planet this world orbits."
+ decision_build_pd_mining_base: "Build Mining Outpost in System"
+ decision_build_pd_mining_base_desc: "We will construct a Planetary Mining Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_mining_base_2: "$decision_build_pd_mining_base$"
+ decision_build_pd_mining_base_2_desc: "$decision_build_pd_mining_base_desc$"
+ decision_build_pd_mining_base_3: "$decision_build_pd_mining_base$"
+ decision_build_pd_mining_base_3_desc: "$decision_build_pd_mining_base_desc$"
+ decision_build_pd_food_base: "Build Hydroponics Outpost in System"
+ decision_build_pd_food_base_desc: "We will construct a Planetary Hydroponics Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_food_base_2: "$decision_build_pd_food_base$"
+ decision_build_pd_food_base_2_desc: "$decision_build_pd_food_base_desc$"
+ decision_build_pd_food_base_3: "$decision_build_pd_food_base$"
+ decision_build_pd_food_base_3_desc: "$decision_build_pd_food_base_desc$"
+ decision_build_pd_energy_base: "Build Generator Oupost in System"
+ decision_build_pd_energy_base_desc: "We will construct a Planetary Generator Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_energy_base_2: "$decision_build_pd_energy_base$"
+ decision_build_pd_energy_base_2_desc: "$decision_build_pd_energy_base_desc$"
+ decision_build_pd_energy_base_3: "$decision_build_pd_energy_base$"
+ decision_build_pd_energy_base_3_desc: "$decision_build_pd_energy_base_desc$"
+ decision_build_pd_research_base: "Build Research Outpost in System"
+ decision_build_pd_research_base_desc: "We will construct a Planetary Research Outpost on an uninhabitable world in this solar system."
+ decision_build_pd_research_base_2: "$decision_build_pd_research_base$"
+ decision_build_pd_research_base_2_desc: "$decision_build_pd_research_base_desc$"
+ decision_build_pd_research_base_3: "$decision_build_pd_research_base$"
+ decision_build_pd_research_base_3_desc: "$decision_build_pd_research_base_desc$"
+ MAKE_MOON_BASES: "§YMoon Outpost§! is constructed."
+ MAKE_MINIG_BASES: "§YMining Outpost§! is constructed."
+ MAKE_FOOD_BASES: "§YHydroponics Outpost§! is constructed."
+ MAKE_ENERGY_BASES: "§YGenerator Outpost§! is constructed."
+ MAKE_RESEARCH_BASES: "§YResearch Outpost§! is constructed."
